--- a/src/components/HomeComponents/styles/aboutContentStyles.css
+++ b/src/components/HomeComponents/styles/aboutContentStyles.css
@@ -6,18 +6,29 @@
 
 .aboutContent-title {
   grid-column-start: 1;
+  grid-column-end: 8;
 }
 
-.aboutContent-title h4 {
+.aboutContent-title h3 {
+  font-weight: 500;
   font-size: 20px;
+}
+.aboutContent-title h4 {
+  padding-top: 2rem;
+  font-size: 56px;
   font-weight: 500;
 }
 .aboutContent-title-2 {
-  grid-column-start: 4;
+  grid-column-start: 1;
   grid-column-end: 5;
+  grid-row-start: 2;
 }
 
 .aboutContent-title-3 {
+  display: none;
+}
+
+.aboutContent-title-4 {
   display: none;
 }
 
@@ -27,9 +38,8 @@
 }
 
 .aboutContent-hobbies {
-  margin-top: 1rem;
-  grid-column-start: 1;
-  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-column-start: 7;
 }
 
 .aboutContent-hobbies h3 {
@@ -43,8 +53,9 @@
 
 /* aboutContent image*/
 .aboutContent-image {
-  grid-column-start: 2;
-  grid-column-end: 7;
+  grid-column-start: 1;
+  grid-column-end: 8;
+  grid-row-start: 2;
   padding: 1rem 1rem 1rem 0;
   max-height: 500px;
 }
@@ -69,29 +80,28 @@
 
 .aboutContent-text-1 {
   grid-row-start: 3;
-  grid-column-start: 2;
-  grid-column-end: 5;
+  grid-column-start: 1;
+  grid-column-end: 7;
   height: min-content;
-  height: 135px;
-  border: 2px solid red;
+  height: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .aboutContent-text-1 p {
   width: 100%;
   min-height: 50px;
-  font-size: 30px;
-  padding: 5px;
+  font-size: 22px;
   overflow: hidden;
 }
 
 .aboutContent-button {
-  margin-top: 10rem;
-  grid-column-start: 4;
-  grid-row-start: 5;
+  margin-top: auto;
+  align-self: center;
   background: #494b4e;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -118,6 +128,17 @@
     grid-template-columns: repeat(13, 1fr);
   }
 
+  .aboutContent-title {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: 6;
+  }
+
+  .aboutContent-title h4 {
+    font-size: 30px;
+    font-weight: 500;
+  }
+
   .aboutContent-title-2 {
     grid-column-start: 5;
     grid-column-end: 7;
@@ -128,36 +149,56 @@
     font-weight: 500;
   }
 
+  /* design and development title */
   .aboutContent-title-3 {
     display: block;
-    grid-column-start: 10;
-    grid-column-end: 114;
-    justify-self: center;
+    grid-column-start: 7;
+    grid-column-end: 10;
+    align-self: flex-end;
   }
 
   .aboutContent-title-3 h4 {
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+  /* ui development title */
+
+  .aboutContent-title-4 {
+    display: block;
+    grid-column-start: 10;
+    grid-column-end: -1;
+    align-self: flex-end;
+    justify-self: end;
+  }
+
+  .aboutContent-title-4 h4 {
+    font-size: 30px;
     font-weight: 500;
     text-transform: uppercase;
   }
 
-  .aboutContent-hobbies {
+  /* image container*/
+  .aboutContent-image {
     grid-column-start: 3;
-    grid-row-start: 1;
-    margin-top: 0;
+    grid-column-end: 9;
+  }
 
+  .aboutContent-hobbies {
+    grid-column-start: 8;
+    grid-row-start: 2;
+    margin-top: 0;
     width: 500px;
-    /* grid-column-end: 5; */
   }
 
   .aboutContent-hobbies .aboutContent-image {
-    width: 500px;
-    height: 420px;
+    /* width: 500px;
+    height: 420px; */
   }
 
   .aboutContent-hobbies h3 {
-    font-size: 120px;
-    line-height: 90px;
+    font-size: 80px;
+    line-height: 80px;
   }
 
   .aboutContent-image img {
