--- a/src/components/WorkComponents/styles/projectModalStyles.css
+++ b/src/components/WorkComponents/styles/projectModalStyles.css
@@ -12,6 +12,7 @@
   z-index: 1000;
   column-gap: 32px;
   grid-template-rows: min-content;
+  row-gap: 0;
 }
 
 /* Title */
@@ -47,34 +48,40 @@
 }
 
 /* Project Description */
-.projectModal-desc {
+.projectModal-desc-container {
+  margin-top: 2rem;
   grid-column-start: 1;
   grid-column-end: 9;
+}
+.projectModal-desc {
   font-size: 30px;
-  border: 2px solid red;
-  height: min-content;
 }
 
 /* Project Modal Information */
 .projectModal-information {
+  position: relative;
+  bottom: 100px;
   grid-column-start: 1;
   grid-column-end: 9;
-  border: 2px solid purple;
 }
 
 /* GRID  Project Information Title */
 .projectModal-information h2 {
   text-transform: uppercase;
   font-weight: 500;
+  padding: 15px 15px 15px 0;
+  border-bottom: 2px solid black;
 }
 
 /* Role Row  */
 .projectModal-information__role {
   display: flex;
   justify-content: space-between;
+  border-bottom: 2px solid black;
 }
 
 .projectModal-information__role h4 {
+  padding: 15px 15px 15px 0;
   font-size: 20px;
   font-weight: 500;
 }
@@ -83,9 +90,11 @@
 .projectModal-information__tech {
   display: flex;
   justify-content: space-between;
+  border-bottom: 2px solid black;
 }
 
 .projectModal-information__tech h4 {
   font-size: 20px;
   font-weight: 500;
+  padding: 15px 15px 15px 0;
 }
